--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +15,61 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.hideScrollBar::-webkit-scrollbar {
+  width: 12px;
+  background-color: transparent;
+}
+
+.hideScrollBar::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.hideScrollBar::-webkit-scrollbar-thumb {
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity, 1)); /* Visible thumb */
+  border-radius: 6px;
+  border: none;
+}
+
+.hideScrollBar::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(34 127 94 / var(--tw-bg-opacity, 1)); /* Thumb on hover */
+}
+
+.hideScrollBar::-webkit-scrollbar-corner {
+  background-color: transparent;
+}
+
+.hideScrollBar::-webkit-scrollbar-button {
+  display: none; /* Hide buttons */
+}
+
+.hideScrollBar::-webkit-scrollbar-track-piece {
+  background-color: transparent;
+}
+@keyframes slide-left {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+@keyframes slide-in {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.animate-slide-left {
+  animation: slide-left 0.5s forwards;
+}
+
+.animate-slide-in {
+  animation: slide-in 0.5s forwards;
+}
+
